--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@shadcn/ui": "^0.0.4",
+        "autoprefixer": "^10.4.20",
         "bootstrap": "^5.2.3",
+        "d3": "^7.9.0",
         "emailjs-com": "^3.2.0",
+        "framer-motion": "^12.4.5",
+        "lucide-react": "^0.475.0",
+        "postcss": "^8.5.2",
         "react": "^18.2.0",
-        "react-bootstrap": "^2.7.0",
+        "react-bootstrap": "^2.10.9",
+        "react-d3-tree": "^3.6.5",
         "react-dom": "^18.2.0",
         "react-helmet-async": "^1.0.7",
         "react-icons": "^4.1.0",
         "react-router-dom": "^6.6.2",
         "react-scripts": "^5.0.1",
+        "react-scroll": "^1.9.3",
         "react-transition-group": "^4.4.2",
+        "sass": "^1.85.0",
+        "tailwindcss": "^4.0.6",
         "typewriter-effect": "^2.18.2",
         "web-vitals": "^3.1.1"
     },
